examples/bad/labeled_break_unknown.mko
// Must fail: unknown loop label.
fn main() {
    while true {
        break missing
    }
}
